--- a/Particle Collision/Particle Collision.csproj
+++ b/Particle Collision/Particle Collision.csproj
@@ -55,6 +55,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Border.cs" />
+    <Compile Include="InputBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InputBox.Designer.cs">
+      <DependentUpon>InputBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Particle.cs" />
     <Compile Include="ParticleEnvironment.cs">
       <SubType>Form</SubType>
@@ -64,7 +71,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VelocityVector.cs" />
+    <Compile Include="Vector2D.cs" />
+    <Compile Include="Window.cs" />
+    <EmbeddedResource Include="InputBox.resx">
+      <DependentUpon>InputBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ParticleEnvironment.resx">
       <DependentUpon>ParticleEnvironment.cs</DependentUpon>
     </EmbeddedResource>
