--- a/Particle Collision/Particle Collision.csproj
+++ b/Particle Collision/Particle Collision.csproj
@@ -62,6 +62,7 @@
     <Compile Include="InputBox.Designer.cs">
       <DependentUpon>InputBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="KD-Tree.cs" />
     <Compile Include="Particle.cs" />
     <Compile Include="ParticleEnvironment.cs">
       <SubType>Form</SubType>
@@ -71,6 +72,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Spawner.cs" />
     <Compile Include="Vector2D.cs" />
     <Compile Include="Window.cs" />
     <EmbeddedResource Include="InputBox.resx">
