--- a/Particle Collision/Particle Collision.csproj
+++ b/Particle Collision/Particle Collision.csproj
@@ -169,6 +169,12 @@
   <ItemGroup>
     <None Include="Resources\preset2.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\character1Small.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\character1SmallInfected.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Text.Json.6.0.1\build\System.Text.Json.targets" Condition="Exists('..\packages\System.Text.Json.6.0.1\build\System.Text.Json.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
